# FinTrack

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: index.py
fintrack-backend/app/: app.py  config.py  database.py  exceptions.py  main.py  models.py  schemas.py  security.py  service.py
fintrack-backend/tests/: conftest.py  test_main.py  test_schemas.py  test_service.py
fintrack-frontend/: index.html  package-lock.json  package.json
fintrack-frontend/src/: App.tsx  index.css  main.tsx
fintrack-frontend/src/components/: CreateAccountModal.tsx  CreateTransactionModal.tsx  DashboardLayout.css  DashboardLayout.tsx  ProtectedRoute.tsx  PublicRoute.tsx  addUserForm.tsx
fintrack-frontend/src/context/: AuthContext.tsx
fintrack-frontend/src/pages/: Accounts.css  Accounts.tsx  Home.css  Home.tsx  Login.css  Login.tsx
fintrack-frontend/src/services/: accounts.tsx  api.ts  auth.ts  transactions.ts
